--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -1,25 +1,25 @@
 @page "/Fenchurch"
 
-<BootstrapHeroComponent BackgroundImage="bg-velero" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="Nuestro objetivo es conseguir una solución en función de las necesidades de cada cliente"/>
+<BootstrapHeroComponent BackgroundImage="bg-velero" BgPos="center" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="Nuestro objetivo es conseguir una solución en función de las necesidades de cada cliente"/>
 
 <section class="container-fluid p-top p-bottom texto-cajas" id="fenchurch" style="font-family: 'Exo 2' !important">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
             <h4>
                 <strong>CLIENTES</strong>
             </h4>
-            <p class="texe-center">
+            <p>
                                     Fenchurch se especializa en asesorar a empresas
                 medianas que quieren ser compradas. Estas empresas
                 generalmente tienen una facturación de entre €15 millones
                 y €300 millones
             </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
             <h4>
                 <strong>FUSIONES & ADQUISICIONES</strong>
             </h4>
-            <p class="text-justified">
+            <p>
                 Fenchurch no hace salidas a bolsa, no gestiona patrimonios,
 no hace préstamos, no hace estudios estratégicos, no audita,
 ni asesora en temas legales o fiscales.
@@ -28,7 +28,7 @@ ni asesora en temas legales o fiscales.
 Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones
             </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
             <h4>
                 <strong>NUESTRO ENFOQUE</strong>
             </h4>
