--- a/Fenchurch/Pages/OperacionesComponent.razor
+++ b/Fenchurch/Pages/OperacionesComponent.razor
@@ -23,7 +23,7 @@
     }
 </style>
 
-<BootstrapHeroComponent BackgroundImage="isla-pascua" CustomTitle="OPERACIONES"
+<BootstrapHeroComponent BackgroundImage="isla-pascua" CustomTitle="OPERACIONES" BgPos="top"
     CustomSubtitle=" Los clientes de Fenchurch han incluido un amplio espectro de la economía, tanto nacionales como extranjeros, estratégicos y financieros." />
 
 <div class="row p-top p-bottom">
