--- a/Fenchurch/Pages/VentaEmpresasComponent.razor
+++ b/Fenchurch/Pages/VentaEmpresasComponent.razor
@@ -1,6 +1,6 @@
 @page "/VentaEmpresas"
 
-<BootstrapHeroComponent  BackgroundImage="venta-empresas-bg"  CustomTitle="LA VENTA DE EMPRESAS" CustomSubtitle="La venta de una empresa no es como vender un piso
+<BootstrapHeroComponent  BackgroundImage="venta-empresas-bg" BgPos="bottom"  CustomTitle="LA VENTA DE EMPRESAS" CustomSubtitle="La venta de una empresa no es como vender un piso
 Está en juego el patrimonio del empresario
 Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de conseguir el mejor precio posible" />
 <div class="container texto-cajas p-top">
@@ -10,7 +10,7 @@ Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de
                 1. PREPARACIÓN
             </h4>
             <p>
-                Definir con claridad el tipo de transacción que los accionistas buscan - ¿Venta Total o Parcial? ¿Ampliación de Capital? ¿Incluir o excluir los inmuebles de la operación? etc., etc.
+                Definir con claridad el tipo de transacción que los accionistas buscan - ¿Venta Total o Parcial? ¿Ampliación de Capital? ¿Incluir o excluir los inmuebles?
             </p>
             <br>
         </div>
@@ -24,7 +24,7 @@ Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de
         <div class="col-md-4">
             <h4>3. VALORAR <span style="text-transform:none">a la</span> EMPRESA</h4>
             <p>
-                Establecer un rango de valoración que permita encontrar un equilibrio entre el precio demandado por los accionistas y el precio que está dispuesto a pagar el comprador.
+                Establecer un rango de valoración que permita encontrar un equilibrio entre el precio demandado.
             </p>
             <br>
         </div>
@@ -34,7 +34,7 @@ Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de
             <h4>
                 4. IDENTIFICAR <span style="text-transform:none">al</span> MEJOR COMPRADOR
             </h4>
-            <p>Fenchurch utiliza todos sus recursos para acceder al máximo número de compradores potenciales: estratégicos y financieros, tanto nacionales como extranjeros, siempre manteniendo la confidencialidad del proceso.</p>
+            <p>Fenchurch utiliza todos sus recursos para acceder al máximo número de compradores potenciales: estratégicos y financieros, tanto nacionales como extranjeros.</p>
         </div>
         <div class="col-md-4">
             <h4>
