--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -57,7 +57,7 @@
 										<a href="/Operaciones">Operaciones</a>
 									</li>
 									<li class="has-dropdown">
-										<a href="#">Apuntes</a>
+										<a href="/Apuntes">Apuntes</a>
 									</li>
 									<li class="has-dropdown">
 										<a href="/Contacto">Contacto</a>
