--- a/Fenchurch/wwwroot/css/site.css
+++ b/Fenchurch/wwwroot/css/site.css
@@ -181,3 +181,27 @@ app {
         display: block;
     }
 }
+
+.modal {
+    text-align: center;
+    padding: 0!important;
+  }
+  
+  .modal:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle !important;
+    margin-right: -4px; /* Adjusts for spacing */
+  }
+  
+  .modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+  }
+
+  .modal-body {
+    padding: 20px !important
+
+  }
