--- a/Fenchurch/wwwroot/css/style.css
+++ b/Fenchurch/wwwroot/css/style.css
@@ -397,7 +397,7 @@ figure {
   /* height: 450px; */
   /* background: url(../img/header-bg.jpg); */
   background-size: cover;
-  background-position: center center;
+  /* background-position: center; */
   background-repeat: no-repeat !important;
 }
 #qbootstrap-hero.servicios {
@@ -423,7 +423,7 @@ figure {
   background-size: cover;
   background-position: top center;
   /* min-height: 630px; */
-  height: 560px;
+  height: 600px;
   position: relative;
 }
 
@@ -2161,7 +2161,7 @@ figure {
 }
 
 #fenchurch {
-  border-bottom: solid 2px lightgray;
+  /* border-bottom: solid 2px lightgray; */
 }
 
 .modal-trigger:hover {
