--- a/Fenchurch/Pages/BootstrapHeroComponent.razor
+++ b/Fenchurch/Pages/BootstrapHeroComponent.razor
@@ -70,7 +70,7 @@
                     <div class="overlay"></div>
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-10 col-md-offset-1 text-center slider-text">
+                            <div class="col-md-12 text-center slider-text">
                                 <div class="slider-text-inner">
                                     <h1>
                                         <strong>@CustomTitle</strong><br>
