--- a/Fenchurch/Pages/CompraEmpresasComponent.razor
+++ b/Fenchurch/Pages/CompraEmpresasComponent.razor
@@ -1,6 +1,7 @@
 @page "/CompraEmpresas"
 
-<BootstrapHeroComponent BackgroundImage="bg-comprar-empresas"  CustomTitle="LA COMPRA DE EMPRESAS" CustomSubtitle="La mayoría de las empresas atractivas y rentables no están normalmente en venta. Es necesario buscarlos activamente y seducirlos para que acepten sentarse a negociar." />
+<BootstrapHeroComponent BackgroundImage="bg-comprar-empresas"  CustomTitle="LA COMPRA DE EMPRESAS" CustomSubtitle="Las empresas atractivas y rentables no están normalmente en venta. 
+Es necesario buscarlos activamente y seducirlos para que acepten sentarse a negociar." />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
         <div class="col-md-4">
