--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -1,6 +1,7 @@
 @page "/Fenchurch"
 
-<BootstrapHeroComponent BackgroundImage="bg-velero" BgPos="center" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="Nuestro objetivo es conseguir una solución en función de las necesidades de cada cliente"/>
+<BootstrapHeroComponent BackgroundImage="bg-velero" BgPos="center" CustomTitle="NUESTRA MISIÓN" CustomSubtitle="El objetivo es conseguir una solución en función de las necesidades de cada cliente
+Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones"/>
 
 <section class="container-fluid p-top p-bottom texto-cajas" id="fenchurch" style="font-family: 'Exo 2' !important">
     <div class="row">
@@ -24,9 +25,7 @@
 no hace préstamos, no hace estudios estratégicos, no audita,
 ni asesora en temas legales o fiscales.
             </p>
-            <p>
-Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones
-            </p>
+            
         </div>
         <div class="col-md-4 text-center">
             <h4>
