--- a/Fenchurch/Pages/VentaEmpresasComponent.razor
+++ b/Fenchurch/Pages/VentaEmpresasComponent.razor
@@ -2,7 +2,7 @@
 
 <BootstrapHeroComponent  BackgroundImage="venta-empresas-bg" BgPos="bottom"  CustomTitle="LA VENTA DE EMPRESAS" CustomSubtitle="La venta de una empresa no es como vender un piso
 Está en juego el patrimonio del empresario
-Fenchurch diseña la venta de la empresa de una forma sistemática con el fin de conseguir el mejor precio posible" />
+Fenchurch diseña la venta con el fin de conseguir el mejor precio posible" />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
         <div class="col-md-4">
