--- a/Fenchurch/Pages/Contacto.razor
+++ b/Fenchurch/Pages/Contacto.razor
@@ -23,10 +23,11 @@
     }
 </style>
 
-<BootstrapHeroComponent BackgroundImage="bg-contacto" CustomTitle="Contacto" CustomSubtitle="Siempre estamos disponibles para explorar, de forma confidencial y sin compromiso, la posibilidad de vender su empresa o hacer una adquisición" />
+<BootstrapHeroComponent BackgroundImage="bg-contacto" CustomTitle="CONTACTO" CustomSubtitle="Siempre estamos disponibles para explorar, de forma confidencial y sin compromiso, la posibilidad de vender su empresa o hacer una adquisición" />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
        <div class="col-md-6">
+           <h1 style="padding:0">Contáctenos</h1>
            <h1 style="color:#152238;padding: 0">
                Teléfono
            </h1>
@@ -44,12 +45,12 @@
            @* <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.8656479227366!2d-3.686322184643678!3d40.43397377936311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228eacb73e1d7%3A0xb9ddb38ae1ef2fe4!2sFenchurch!5e0!3m2!1ses-419!2scl!4v1589847221112!5m2!1ses-419!2scl" width="auto" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> *@
        </div>
        <div class="col-md-6">
-           <div class="row">
+           @* <div class="row">
                <div class="col-md-8 col-md-offset-4">
                     <h1>Mensaje</h1>
                     <br>
                </div>
-           </div>
+           </div> *@
            <form action="" id="contacto">
                <div class="form-group row">
                    <label class="col-md-4" for="nombre">Nombre</label>
@@ -73,7 +74,7 @@
                </div>
                <div class="form-group row">
                    <label for="mensaje" class="col-md-4">Mensaje</label>
-                   <textarea name="mensaje" id="mensaje" rows="10" class="form-control col-md-8"></textarea>
+                   <textarea name="mensaje" id="mensaje" rows="2" class="form-control col-md-8"></textarea>
                </div>
                <div class="row">
                    <br>
