--- a/Fenchurch/wwwroot/css/style.css
+++ b/Fenchurch/wwwroot/css/style.css
@@ -34,9 +34,13 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: #828282;
+  color: black;
   background: #fff;
+  position: relative;
+  /* height: 100vh;
+  width: 100vw; */
 }
+
 
 #page {
   position: relative;
@@ -2040,7 +2044,7 @@ figure {
 
 .form-control {
   box-shadow: none;
-  background: transparent;
+  background: #ccc !important;
   border: 2px solid rgba(0, 0, 0, 0.1);
   height: 54px;
   font-size: 14px;
