envio email en contacto

--- a/Fenchurch/Shared/MainLayout.razor
+++ b/Fenchurch/Shared/MainLayout.razor
@@ -130,6 +130,7 @@
             await js.InvokeVoidAsync("loadScript","js/perfect-scrollbar.js");
             await js.InvokeVoidAsync("loadScript","https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js");
 			
+            await js.InvokeVoidAsync("loadScript","js/contacto.js");
             @* <!-- Main --> *@
             await js.InvokeVoidAsync("loadScript","js/main.js");
             @* await js.InvokeVoidAsync("loadPS"); *@
