--- a/Fenchurch/Pages/Contacto.razor
+++ b/Fenchurch/Pages/Contacto.razor
@@ -74,12 +74,12 @@
                </div>
                <div class="form-group row">
                    <label for="mensaje" class="col-md-4">Mensaje</label>
-                   <textarea name="mensaje" id="mensaje" rows="2" class="form-control col-md-8"></textarea>
+                   <textarea name="mensaje" id="mensaje" rows="2" class="form-control col-md-8" ></textarea>
                </div>
                <div class="row">
                    <br>
                     <div class="text-center col-md-8 col-md-offset-4">
-                       <button type="submit" class="btn-submit">ENVIAR</button>
+                       <button type="button" class="btn-submit" onclick="enviarFrmContacto()">ENVIAR</button>
                    </div>
                </div>
 
@@ -88,4 +88,5 @@
     </div>
 </div>
 <div style="height:100px"></div>
+
 
