--- a/Fenchurch/Pages/Contacto.razor
+++ b/Fenchurch/Pages/Contacto.razor
@@ -23,7 +23,7 @@
     }
 </style>
 
-<BootstrapHeroComponent BackgroundImage="bg-contacto" CustomTitle="CONTACTO" CustomSubtitle="Siempre estamos disponibles para explorar, de forma confidencial y sin compromiso, la posibilidad de vender su empresa o hacer una adquisición" />
+<BootstrapHeroComponent BgPos="top" BackgroundImage="bg-contacto" CustomTitle="CONTACTO" CustomSubtitle="Siempre estamos disponibles para explorar, de forma confidencial y sin compromiso, la posibilidad de vender su empresa o hacer una adquisición" />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
        <div class="col-md-6">
