--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -5,7 +5,7 @@ Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones"/
 
 <section class="container-fluid p-top p-bottom texto-cajas" id="fenchurch" style="font-family: 'Exo 2' !important">
     <div class="row">
-        <div class="col-md-4 text-center">
+        <div class="col-md-4">
             <h4>
                 <strong>CLIENTES</strong>
             </h4>
@@ -27,7 +27,7 @@ ni asesora en temas legales o fiscales.
             </p>
             
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-right">
             <h4>
                 <strong>NUESTRO ENFOQUE</strong>
             </h4>
