--- a/Fenchurch/Pages/VentaEmpresasComponent.razor
+++ b/Fenchurch/Pages/VentaEmpresasComponent.razor
@@ -14,14 +14,14 @@ Fenchurch diseña la venta con el fin de conseguir el mejor precio posible" />
             </p>
             <br>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
             <h4>2. MARKETING</h4>
             <p>
                 Redactar un Perfil Ciego y un Cuaderno de Venta.
             </p>
             <br>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-right">
             <h4>3. VALORAR <span style="text-transform:none">a la</span> EMPRESA</h4>
             <p>
                 Establecer un rango de valoración que permita encontrar un equilibrio entre el precio demandado.
@@ -36,13 +36,13 @@ Fenchurch diseña la venta con el fin de conseguir el mejor precio posible" />
             </h4>
             <p>Fenchurch utiliza todos sus recursos para acceder al máximo número de compradores potenciales: estratégicos y financieros, tanto nacionales como extranjeros.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
             <h4>
                 5. DUE DILIGENCE
             </h4>
             <p>Gestionar todos los aspectos del Due Diligence para minimizar las distracciones, permitiendo que el empresario se pueda concentrar en dirigir la empresa.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-right">
             <h4>
                 6. NEGOCIACIONES <span style="text-transform:none">y</span> CIERRE
             </h4>
