--- a/Fenchurch/Pages/ArticulosComponent.razor
+++ b/Fenchurch/Pages/ArticulosComponent.razor
@@ -24,82 +24,100 @@
 <div class="container texto-cajas p-top">
   <div class="contenedor-items-apuntes">
     <table>
-      <tr>
+      @* <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="#">
               ¿Necesita un asesor para vender su empresa?
             </a>
           </li>
         </td>
+      </tr> *@
+      <tr>
+        <td class="item-apuntes">
+          <li>
+            <a href="/Articulos/calendario-de-actividad">
+              Calendario del proceso de una compraventa
+            </a>
+          </li>
+        </td>
       </tr>
       <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="/Articulos/definiciones-financieras">
+              Definiciones financieras
+            </a>
+          </li>
+        </td>
+      </tr>
+      @* <tr>
+        <td class="item-apuntes">
+          <li>
+            <a href="#">
               Verdades y mentiras sobre valoraciones de empresas
             </a>
           </li>
         </td>
-      </tr>
-      <tr>
+      </tr> *@
+      @* <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="#">
               ¿Cuánto vale mi empresa?
             </a>
           </li>
         </td>
-      </tr>
-      <tr>
+      </tr> *@
+      @* <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="#">
               10 Equivocaciones en la compraventa de empresas
             </a>
           </li>
         </td>
-      </tr>
-      <tr>
+      </tr> *@
+      @* <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="#">
               Como maximizar el precio de venta de su empresa
             </a>
           </li>
         </td>
-      </tr>
-      <tr>
+      </tr> *@
+      @* <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="#">
               Los 10 mandamientos para vender una empresa con éxito
             </a>
           </li>
         </td>
-      </tr>
-      <tr>
+      </tr> *@
+      @* <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="#">
               El tamaño de la empresa sí importa
             </a>
           </li>
         </td>
-      </tr>
-      <tr>
+      </tr> *@
+      @* <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="#">
               Reflexiones sobre el proceso de venta de una empresa
             </a>
           </li>
         </td>
-      </tr>
+      </tr> *@
       <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="/Articulos/Ebitda">
               Valoración por el múltiplo de EBITDA
             </a>
           </li>
@@ -108,7 +126,7 @@
       <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#" data-target="#modal-apuntes" data-toggle="modal">
+            <a href="/Articulos/proceso-de-compraventa-de-una-empresa">
               El proceso de venta de una empresa
             </a>
           </li>
@@ -118,37 +136,3 @@
   </div>
 </div>
 <div style="height:100px"></div>
-
-<!-- Modal -->
-<div class="modal fade" id="modal-apuntes" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      @* <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-            aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title
-      </div> *@
-      <div class="modal-body">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, hic, eveniet consequuntur ea laudantium
-        debitis, cum quasi quam illum excepturi ducimus facilis. Odit illum accusantium possimus eligendi porro maiores
-        provident! <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, hic, eveniet consequuntur ea laudantium
-        debitis, cum quasi quam illum excepturi ducimus facilis. Odit illum accusantium possimus eligendi porro maiores
-        provident! <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, hic, eveniet consequuntur ea laudantium
-        debitis, cum quasi quam illum excepturi ducimus facilis. Odit illum accusantium possimus eligendi porro maiores
-        provident! <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, hic, eveniet consequuntur ea laudantium
-        debitis, cum quasi quam illum excepturi ducimus facilis. Odit illum accusantium possimus eligendi porro maiores
-        provident! <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, hic, eveniet consequuntur ea laudantium
-        debitis, cum quasi quam illum excepturi ducimus facilis. Odit illum accusantium possimus eligendi porro maiores
-        provident!
-      </div>
-      @* <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div> *@
-    </div>
-  </div>
-</div>
