--- a/Fenchurch/Pages/CompraEmpresasComponent.razor
+++ b/Fenchurch/Pages/CompraEmpresasComponent.razor
@@ -8,11 +8,11 @@ Es necesario buscarlos activamente y seducirlos para que acepten sentarse a nego
             <h4>1. Estrategia de Adquisición</h4>
             <p>Elaborar una lista de criterios de adquisición para identificar a los objetivos potenciales con mayor precisión. Es esencial saber lo que se busca.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
             <h4>2. Identificar Objetivos</h4>
             <p>Identificar a todos los objetivos de adquisición que se ajustan a los criterios de nuestro cliente. Los candidatos más atractivos son contactados para determinar su posible interés en ser adquiridos.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-right">
             <h4>3. Recopilar Información de los Objetivos</h4>
             <p>Para cada objetivo identificado que indique interés en mantener conversaciones preliminares, recopilamos información básica para presentar a nuestro cliente.</p>
         </div>
@@ -22,11 +22,11 @@ Es necesario buscarlos activamente y seducirlos para que acepten sentarse a nego
             <h4>4. Valoración</h4>
             <p>Valorar a aquellos objetivos que son de interés a nuestro cliente y  considerarían ser adquiridos.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-center">
             <h4>5. Oferta y Due Diligence</h4>
             <p>Hacer una oferta no vinculante al objetivo que mejor encaja con los criterios de adquisición de nuestro cliente. Una vez que el vendedor acepta la oferta comienza la Due Diligence para verificar que la información presentada por el vendedor es correcta y que no existen contingencias.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-right">
             <h4>6. Negociación y Cierre</h4>
             <p>En esta fase se negocia el contrato de compraventa, que incluye no solo el precio final, sino también las garantías e indemnizaciones exigidas al vendedor.</p>
         </div>
