--- a/Fenchurch/Pages/RedInternacionalComponent.razor
+++ b/Fenchurch/Pages/RedInternacionalComponent.razor
@@ -1,6 +1,6 @@
 @page "/RedInternacional"
 
-<BootstrapHeroComponent BackgroundImage="red-internacional-bg"  CustomTitle="CONECTIVIDAD GLOBAL" CustomSubtitle="Compradores internacionales siempre han sido un componente importante en muchas de las operaciones de Fenchurch." />
+<BootstrapHeroComponent BackgroundImage="red-internacional-bg"  CustomTitle="CONECTIVIDAD GLOBAL" CustomSubtitle="Compradores internacionales han sido un componente en las operaciones de Fenchurch" />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
         <div class="col-md-6">
@@ -8,7 +8,7 @@
             <p>Durante más de 30 años Fenchurch ha desarrollado relaciones con firmas extranjeras de asesoramiento en fusiones y adquisiciones.
 A través de estas relaciones proporcionamos a nuestros clientes acceso al conocimiento y contactos en sus mercados locales para maximizar el éxito de la operación.</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 text-right">
             <h4>COMPRADORES INTERNACIONALES</h4>
             <p>En el siglo XXI casi todas las operaciones tienen un componente internacional</p>
         </div>
