--- a/Fenchurch/Pages/Articulos/17-calendario-de-actividad.razor
+++ b/Fenchurch/Pages/Articulos/17-calendario-de-actividad.razor
@@ -1,6 +1,10 @@
 @page "/Articulos/calendario-de-actividad"
 
-
+<style>
+    #page {
+        background-color: #ccc;
+    }
+</style>
 
 <article class="container texto-cajas p-top no-header text-justified">
   <h1 class="text-center">CALENDARIO DEL PROCESO DE UNA COMPRAVENTA</h1>
