--- a/Fenchurch/Pages/Articulos/19-definiciones-financieras.razor
+++ b/Fenchurch/Pages/Articulos/19-definiciones-financieras.razor
@@ -1,5 +1,9 @@
 @page "/Articulos/definiciones-financieras"
-
+<style>
+    #page {
+        background-color: #ccc;
+    }
+</style>
 <style>
     dt, dd {
         display: inline !important;
