--- a/Fenchurch/Pages/Articulos/BASE.razor
+++ b/Fenchurch/Pages/Articulos/BASE.razor
@@ -1,6 +1,10 @@
 @page "/Articulos/insert-route"
 
-
+<style>
+    #page {
+        background-color: #ccc;
+    }
+</style>
 
 <article class="container texto-cajas p-top no-header text-justified">
   
