--- a/Fenchurch/Pages/FenchurchComponent.razor
+++ b/Fenchurch/Pages/FenchurchComponent.razor
@@ -6,7 +6,7 @@ Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones"/
 <section class="container-fluid p-top p-bottom texto-cajas" id="fenchurch" style="font-family: 'Exo 2' !important">
     <div class="row">
         <div class="col-md-4">
-            <h4>
+            <h4 class="text-center">
                 <strong>CLIENTES</strong>
             </h4>
             <p>
@@ -16,8 +16,8 @@ Desde 1989 Fenchurch solo y exclusivamente asesora en fusiones y adquisiciones"/
                 y €300 millones
             </p>
         </div>
-        <div class="col-md-4 text-center">
-            <h4>
+        <div class="col-md-4">
+            <h4 class="text-center">
                 <strong>FUSIONES & ADQUISICIONES</strong>
             </h4>
             <p>
@@ -27,8 +27,8 @@ ni asesora en temas legales o fiscales.
             </p>
             
         </div>
-        <div class="col-md-4 text-right">
-            <h4>
+        <div class="col-md-4">
+            <h4 class="text-center">
                 <strong>NUESTRO ENFOQUE</strong>
             </h4>
             <p>Cada fase del proceso de nuestras operaciones está 
