--- a/Fenchurch/Pages/VentaEmpresasComponent.razor
+++ b/Fenchurch/Pages/VentaEmpresasComponent.razor
@@ -6,7 +6,7 @@ Fenchurch diseña la venta con el fin de conseguir el mejor precio posible" />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
         <div class="col-md-4">
-            <h4>
+            <h4 class="text-center">
                 1. PREPARACIÓN
             </h4>
             <p>
@@ -14,36 +14,36 @@ Fenchurch diseña la venta con el fin de conseguir el mejor precio posible" />
             </p>
             <br>
         </div>
-        <div class="col-md-4 text-center">
-            <h4>2. MARKETING</h4>
+        <div class="col-md-4">
+            <h4 class="text-center">2. MARKETING</h4>
             <p>
                 Redactar un Perfil Ciego y un Cuaderno de Venta.
             </p>
             <br>
         </div>
-        <div class="col-md-4 text-right">
-            <h4>3. VALORAR <span style="text-transform:none">a la</span> EMPRESA</h4>
+        <div class="col-md-4">
+            <h4 class="text-center">3. VALORACIÓN</h4>
             <p>
-                Establecer un rango de valoración que permita encontrar un equilibrio entre el precio demandado.
+                Establecer un rango de valoración que permita encontrar un equilibrio entre el precio demandado por comprador y vendedor.
             </p>
             <br>
         </div>
     </div>
     <div class="row">
         <div class="col-md-4">
-            <h4>
+            <h4 class="text-center">
                 4. IDENTIFICAR <span style="text-transform:none">al</span> MEJOR COMPRADOR
             </h4>
-            <p>Fenchurch utiliza todos sus recursos para acceder al máximo número de compradores potenciales: estratégicos y financieros, tanto nacionales como extranjeros.</p>
+            <p>Fenchurch utiliza todos sus recursos para acceder al máximo número de compradores potenciales: estratégicos, financieros, nacionales y extranjeros.</p>
         </div>
-        <div class="col-md-4 text-center">
-            <h4>
+        <div class="col-md-4">
+            <h4 class="text-center">
                 5. DUE DILIGENCE
             </h4>
             <p>Gestionar todos los aspectos del Due Diligence para minimizar las distracciones, permitiendo que el empresario se pueda concentrar en dirigir la empresa.</p>
         </div>
-        <div class="col-md-4 text-right">
-            <h4>
+        <div class="col-md-4">
+            <h4 class="text-center">
                 6. NEGOCIACIONES <span style="text-transform:none">y</span> CIERRE
             </h4>
             <p>Recibir todas las ofertas y negociar para conseguir la oferta más atractiva para nuestro cliente.</p>
