--- a/Fenchurch/Pages/Articulos/15-Ebitda.razor
+++ b/Fenchurch/Pages/Articulos/15-Ebitda.razor
@@ -1,6 +1,10 @@
 @page "/Articulos/Ebitda"
 
-
+<style>
+    #page {
+        background-color: #ccc;
+    }
+</style>
 
 <article class="container texto-cajas p-top no-header text-justified">
   <h1 class="text-center dark-red">
