--- a/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
+++ b/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
@@ -1,6 +1,10 @@
 @page "/Articulos/proceso-de-compraventa-de-una-empresa"
 
-
+<style>
+    #page {
+        background-color: #ccc;
+    }
+</style>
 
 <article class="container texto-cajas p-top no-header text-justified">
   <h1 class="text-center">
