--- a/Fenchurch/Pages/ArticulosComponent.razor
+++ b/Fenchurch/Pages/ArticulosComponent.razor
@@ -24,15 +24,15 @@
 <div class="container texto-cajas p-top">
   <div class="contenedor-items-apuntes">
     <table>
-      @* <tr>
+      <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#">
+            <a href="/Articulos/necesita-un-asesor-para-vender-su-empresa">
               ¿Necesita un asesor para vender su empresa?
             </a>
           </li>
         </td>
-      </tr> *@
+      </tr>
       <tr>
         <td class="item-apuntes">
           <li>
@@ -51,15 +51,15 @@
           </li>
         </td>
       </tr>
-      @* <tr>
+      <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#">
+            <a href="/Articulos/valuation-truths">
               Verdades y mentiras sobre valoraciones de empresas
             </a>
           </li>
         </td>
-      </tr> *@
+      </tr>
       @* <tr>
         <td class="item-apuntes">
           <li>
@@ -69,33 +69,33 @@
           </li>
         </td>
       </tr> *@
-      @* <tr>
+      <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#">
+            <a href="/Articulos/why-deals-fails">
               10 Equivocaciones en la compraventa de empresas
             </a>
           </li>
         </td>
-      </tr> *@
-      @* <tr>
+      </tr>
+      <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#">
+            <a href="/Articulos/reflexiones-sobre-el-proceso-de-venta">
               Como maximizar el precio de venta de su empresa
             </a>
           </li>
         </td>
-      </tr> *@
-      @* <tr>
+      </tr>
+      <tr>
         <td class="item-apuntes">
           <li>
-            <a href="#">
+            <a href="/Articulos/10-mandamientos">
               Los 10 mandamientos para vender una empresa con éxito
             </a>
           </li>
         </td>
-      </tr> *@
+      </tr>
       @* <tr>
         <td class="item-apuntes">
           <li>
@@ -128,6 +128,15 @@
           <li>
             <a href="/Articulos/proceso-de-compraventa-de-una-empresa">
               El proceso de venta de una empresa
+            </a>
+          </li>
+        </td>
+      </tr>
+      <tr>
+        <td class="item-apuntes">
+          <li>
+            <a href="/Articulos/faq">
+              Preguntas más frecuentes
             </a>
           </li>
         </td>
