--- a/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
+++ b/Fenchurch/Pages/Articulos/16-proceso-de-compraventa-de-una-empresa.razor
@@ -11,9 +11,9 @@
       ¿CUÁL ES EL PROCESO DE UNA COMPRAVENTA DE UNA EMPRESA?
   </h1>
   <p>
-      <h4>
+      <strong>
           1. Desarrollar una Estrategia
-      </h4>
+      </strong>
       <ul>
           <li>Establecer los objetivos que se quieren conseguir.</li>
           <li>Desarrollar las tácticas de venta.</li>
@@ -21,7 +21,7 @@
       </ul>
   </p>
   <p>
-      <h4>2. Maximizar el valor de la empres</h4>
+      <strong>2. Maximizar el valor de la empres</strong>
       <ul>
           <li>Determinar que medidas se pueden tomar para maximizar el precio de venta.</li>
           <li>Resolver todas las posibles contingencias (fiscales, legales, laborales, medioambientales).</li>
@@ -29,54 +29,55 @@
       </ul>
   </p>
   <p>
-      <h4>3. Valorar a la empresa</h4>
+      <strong>3. Valorar a la empresa</strong>
       <ul>
           <li>El propietario debe tener una idea clara del valor de su empresa y que entienda el razonamiento detrás del mismo.</li>
       </ul>
   </p>
   <p>
-      <h4>4. Redactar el Cuaderno de Venta</h4>
+      <strong>4. Redactar el Cuaderno de Venta</strong>
       <ul>
           <li>El cuaderno de venta es un instrumento que resalta los aspectos más atractivos de la empresa y suaviza sus puntos más débiles.</li>
       </ul>
   </p>    
   <p>
-      <h4>5. Identificar y contactar con todos los compradores potenciales</h4>
+      <strong>5. Identificar y contactar con todos los compradores potenciales</strong>
       <ul>
           <li>Identificar y contactar al máximo número de posibles compradores cualificados es una de las piedras angulares del proceso de venta.</li>
       </ul>
   </p>
   <p>
-      <h4>6. Perfil Ciego y el Acuerdo de Confidencialidad</h4>
+      <strong>6. Perfil Ciego y el Acuerdo de Confidencialidad</strong>
       <ul>
           <li>Enviar el Perfil Ciego y el Acuerdo de Confidencialidad a todos los compradores potenciales</li>
       </ul>
   </p>
   <p>
-      <h4>7. Visitas</h4>
+      <strong>7. Visitas</strong>
       <ul>
           <li>Organizar visitas para aquellos compradores potenciales que indiquen interés para que puedan examinar las instalaciones, entrevistarse con el propietario y hacer preguntas.</li>
       </ul>
   </p>
   <p>
-      <h4>8. Recibir Ofertas de Compra</h4>
+      <strong>8. Recibir Ofertas de Compra</strong>
       <ul>
           <li>Todas las ofertas se analizan en detalle para poder escoger al comprador que ha hecho la oferta más ventajosa.</li>
           <li>La oferta seleccionada queda reflejada en una “Carta de Intenciones”, que plasma sobre el papel los acuerdos verbales alcanzados entre el comprador y el vendedor.</li>
       </ul>
   </p>
   <p>
-      <h4>9. Due Diligence</h4>
+      <strong>9. Due Diligence</strong>
       <ul>
           <li>El proceso de “due diligence” consiste en un estudio en profundidad de la empresa para verificar lo que se está comprando, confirmar que el negocio funciona como se ha dicho que funciona e identificar todos los riesgos asociados a la operación.</li>
       </ul>
   </p>
   <p>
-      <h4>10. Contrato de Compraventa y Cierre de la Operación</h4>
+      <strong>10. Contrato de Compraventa y Cierre de la Operación</strong>
       <ul>
           <li>El contrato de compraventa es el documento legal que detalla los términos y condiciones de la operación: el precio, la forma de pago, la estructura de la operación, las garantías requeridas por el comprador y las indemnificaciones, entre otros muchos temas.</li>
           <li>Una vez que ambas partes están de acuerdo con las condiciones del contrato, estos se firman y el comprador entrega al vendedor el dinero acordado y recibe título de la empresa.</li>
       </ul>
   </p>
 </article>
-<div style="height:100px"></div>
+<div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
+<div class="bottom-placeholder"></div>
