--- a/Fenchurch/Pages/Articulos/17-calendario-de-actividad.razor
+++ b/Fenchurch/Pages/Articulos/17-calendario-de-actividad.razor
@@ -6,52 +6,56 @@
     }
 </style>
 
-<article class="container texto-cajas p-top no-header text-justified">
+<article class="container texto-cajas p-top no-header" style="display:flex;align-items:center;flex-direction:column;">
   <h1 class="text-center">CALENDARIO DEL PROCESO DE UNA COMPRAVENTA</h1>
-  <h4>Mes 1</h4>
-  <ul>
-      <li>Identificar Asesor</li>
-      <li>Desarrollar Estrategia de Venta</li>
-  </ul>
-  <h4>Mes 2</h4>
-  <ul>
-      <li>Preparación del Cuaderno de Venta</li>
-      <li>Identificación de Compradores Potenciales</li>
-      <li>Valoración</li>
-  </ul>
-  <h4>Mes 3</h4>
-  <ul>
-      <li>Enviar Perfil Ciego</li>
-      <li>Enviar Acuerdo de Confidencialidad</li>
-      <li>Enviar Cuaderno de Venta</li>
-  </ul>
-    <h4>Mes 4</h4>
+  <div class="calendario" style="max-width:320px">
+    <h4>Mes 1</h4>
     <ul>
-        <li>Visitas de Compradores Potenciales</li>
-        <li>Recepción de Ofertas no-vinculantes</li>   
+        <li>Identificar Asesor</li>
+        <li>Desarrollar Estrategia de Venta</li>
     </ul>
-  <h4>Mes 5</h4>
-  <ul>
-      <li>Negociaciones</li>
-      <li>Ofertas Finales</li>
-      <li>Selección del Comprador</li>
-  </ul>
-  <h4>Mes 6</h4>
-  <ul>
-      <li>Redactar Acuerdo de Intenciones</li>
-      <li>Due Diligence</li>
-  </ul>
-  <h4>Mes 7</h4>
-  <ul>
-      <li>Due Diligence</li>
-  </ul>
-  <h4>Mes 8</h4>
-  <ul>
-      <li>Redacción y Negociación de Contratos</li>
-  </ul>
-  <h4>Mes 9</h4>
-  <ul>
-      <li>Cierre de la Operación</li>
-  </ul>
+    <h4>Mes 2</h4>
+    <ul>
+        <li>Preparación del Cuaderno de Venta</li>
+        <li>Identificación de Compradores Potenciales</li>
+        <li>Valoración</li>
+    </ul>
+    <h4>Mes 3</h4>
+    <ul>
+        <li>Enviar Perfil Ciego</li>
+        <li>Enviar Acuerdo de Confidencialidad</li>
+        <li>Enviar Cuaderno de Venta</li>
+    </ul>
+        <h4>Mes 4</h4>
+        <ul>
+            <li>Visitas de Compradores Potenciales</li>
+            <li>Recepción de Ofertas no-vinculantes</li>   
+        </ul>
+    <h4>Mes 5</h4>
+    <ul>
+        <li>Negociaciones</li>
+        <li>Ofertas Finales</li>
+        <li>Selección del Comprador</li>
+    </ul>
+    <h4>Mes 6</h4>
+    <ul>
+        <li>Redactar Acuerdo de Intenciones</li>
+        <li>Due Diligence</li>
+    </ul>
+    <h4>Mes 7</h4>
+    <ul>
+        <li>Due Diligence</li>
+    </ul>
+    <h4>Mes 8</h4>
+    <ul>
+        <li>Redacción y Negociación de Contratos</li>
+    </ul>
+    <h4>Mes 9</h4>
+    <ul>
+        <li>Cierre de la Operación</li>
+    </ul>
+
+  </div>
 </article>
-<div style="height:100px"></div>
+<div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
+<div class="bottom-placeholder"></div>
