--- a/Fenchurch/Pages/Articulos/3-reflexiones-sobre-el-proceso-de-venta.razor
+++ b/Fenchurch/Pages/Articulos/3-reflexiones-sobre-el-proceso-de-venta.razor
@@ -48,4 +48,5 @@
       </li>
   </ol>
 </article>
-<div style="height:100px"></div>
+<div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
+<div class="bottom-placeholder"></div>
