--- a/Fenchurch/Pages/Articulos/8-valuation-truths.razor
+++ b/Fenchurch/Pages/Articulos/8-valuation-truths.razor
@@ -27,4 +27,5 @@
   <p>Por eso, desde el punto de vista del vendedor, es esencial contactar con todos los compradores potenciales para organizar una subasta y conseguir el mejor precio existente en ese momento en el mercado.</p>
   <p>Una valoración es simplemente un instrumento para negociar sobre el precio de la venta de la empresa.</p>
 </article>
-<div style="height:100px"></div>
+<div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
+<div class="bottom-placeholder"></div>
