--- a/Fenchurch/Pages/CompraEmpresasComponent.razor
+++ b/Fenchurch/Pages/CompraEmpresasComponent.razor
@@ -1,11 +1,11 @@
 @page "/CompraEmpresas"
 
 <BootstrapHeroComponent BackgroundImage="bg-comprar-empresas"  CustomTitle="LA COMPRA DE EMPRESAS" CustomSubtitle="Las empresas atractivas y rentables no están normalmente en venta. 
-Es necesario buscarlas activamente y seducirlos para que acepten sentarse a negociar." />
+Es necesario buscarlas activamente y seducirlas para que acepten sentarse a negociar." />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
         <div class="col-md-4">
-            <h4 class="text-center">1. Estrategia de Adquisición</h4>
+            <h4 class="text-center">1. Estrategia</h4>
             <p>Elaborar una lista de criterios de adquisición para identificar a los objetivos potenciales con mayor precisión. Es esencial saber lo que se busca.</p>
         </div>
         <div class="col-md-4">
@@ -13,7 +13,7 @@ Es necesario buscarlas activamente y seducirlos para que acepten sentarse a nego
             <p>Identificar a todos los objetivos de adquisición que se ajustan a los criterios de nuestro cliente. Los candidatos más atractivos son contactados para determinar su posible interés en ser adquiridos.</p>
         </div>
         <div class="col-md-4">
-            <h4 class="text-center">3. Recopilar Información de los Objetivos</h4>
+            <h4 class="text-center">3. Recopilar Información</h4>
             <p>Para cada objetivo identificado que indique interés en mantener conversaciones preliminares, recopilamos información básica para presentar a nuestro cliente.</p>
         </div>
     </div>
@@ -32,5 +32,5 @@ Es necesario buscarlas activamente y seducirlos para que acepten sentarse a nego
         </div>
     </div>
 </div>
-<div style="height:100px"></div>
+<div class="bottom-placeholder"></div>
 
