--- a/Fenchurch/Pages/OperacionesComponent.razor
+++ b/Fenchurch/Pages/OperacionesComponent.razor
@@ -24,7 +24,7 @@
 </style>
 
 <BootstrapHeroComponent BackgroundImage="isla-pascua" CustomTitle="OPERACIONES" BgPos="top"
-    CustomSubtitle=" Los clientes de Fenchurch han incluido un amplio espectro de la economía, tanto nacionales como extranjeros, estratégicos y financieros." />
+    CustomSubtitle="Los clientes de Fenchurch han incluido empresas de múltiples sectores de la economía, tanto nacionales como extranjeros, estratégicos y financieros." />
 
 <div class="row p-top p-bottom">
     <div class="container">
@@ -152,4 +152,4 @@
     </div>
 
 </div>
-<div style="height:100px"></div>
+<div class="bottom-placeholder"></div>
