--- a/Fenchurch/Pages/RedInternacionalComponent.razor
+++ b/Fenchurch/Pages/RedInternacionalComponent.razor
@@ -1,6 +1,6 @@
 @page "/RedInternacional"
 
-<BootstrapHeroComponent BackgroundImage="red-internacional-bg"  CustomTitle="CONECTIVIDAD GLOBAL" CustomSubtitle="Compradores internacionales han sido un gran componente en las operaciones de Fenchurch" />
+<BootstrapHeroComponent BackgroundImage="red-internacional-bg"  CustomTitle="CONECTIVIDAD GLOBAL" CustomSubtitle="Compradores internacionales han sido un importante componente en las operaciones de Fenchurch" />
 <div class="container texto-cajas p-top">
     <div class="row p-top p-bottom">
         <div class="col-md-6">
@@ -14,5 +14,5 @@ A través de estas relaciones proporcionamos a nuestros clientes acceso al conoc
         </div>
     </div>
 </div>
-<div style="height:100px"></div>
+<div class="bottom-placeholder"></div>
 
