--- a/Fenchurch/Pages/VentaEmpresasComponent.razor
+++ b/Fenchurch/Pages/VentaEmpresasComponent.razor
@@ -51,5 +51,5 @@ Fenchurch diseña la venta con el fin de conseguir el mejor precio posible" />
         </div>
     </div>
 </div>
-<div style="height:100px"></div>
+<div class="bottom-placeholder"></div>
 
