--- a/Fenchurch/Pages/Articulos/19-definiciones-financieras.razor
+++ b/Fenchurch/Pages/Articulos/19-definiciones-financieras.razor
@@ -119,4 +119,5 @@
       </p>
   </dl>
 </article>
-<div style="height:100px"></div>
+<div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
+<div class="bottom-placeholder"></div>
