--- a/Fenchurch/Pages/Articulos/BASE.razor
+++ b/Fenchurch/Pages/Articulos/BASE.razor
@@ -9,4 +9,5 @@
 <article class="container texto-cajas p-top no-header text-justified">
   
 </article>
-<div style="height:100px"></div>
+<div class="col-md-12 contenedor-btn-print"><button type="button" class="btn-submit" onclick="imprimir()">Imprimir <i class="material-icons">print</i></button></div>
+<div class="bottom-placeholder"></div>
