--- a/Fenchurch/Pages/ArticulosComponent.razor
+++ b/Fenchurch/Pages/ArticulosComponent.razor
@@ -6,7 +6,6 @@
     text-transform: inherit !important;
     font-size: 24px;
     font-weight: 700;
-    font-family: "Exo 2" !important;
   }
 
   .item-apuntes:hover a {
@@ -144,4 +143,4 @@
     </table>
   </div>
 </div>
-<div style="height:100px"></div>
+<div class="bottom-placeholder"></div>
