--- a/Fenchurch/wwwroot/css/style.css
+++ b/Fenchurch/wwwroot/css/style.css
@@ -2228,11 +2228,16 @@ button.btn-submit {
   padding: 10px 20px;
   border-radius: 2px;
   transition: all 0.5s ease-in-out;
+  display:flex; flex-direction:row; align-items: center; justify-content:space-between;
 }
 
 button.btn-submit:hover {
   background-color: darkred;
   color: white;
+}
+
+.contenedor-btn-print {
+  padding:100px;display:flex;justify-content:flex-end;
 }
 
 .no-header {
@@ -2250,3 +2255,39 @@ button.btn-submit:hover {
 .w-100 {
   width: 100% !important;
 }
+
+.bottom-placeholder {
+  height:100px;
+}
+
+ @media print {
+   footer, 
+   .qbootstrap-nav, 
+   .gototop, 
+   .btn-placeholder,
+   .contenedor-btn-print {
+     display: none;
+   }
+
+   .no-header {
+     margin-top: 0;
+   }
+
+   article {
+     padding-bottom: 100px;
+   }
+
+   body, html, #page {
+     height:100% !important;
+     overflow: visible !important;
+     display: block;
+     margin: 0;
+   }
+
+   #page {
+   }
+
+   #qbootstrap-offcanvas {
+     display: none;
+   }
+ }
